--- a/versions.gradle
+++ b/versions.gradle
@@ -45,7 +45,7 @@ versions.firebase_config = "19.1.3"
 versions.firebase_crashlytics = "17.4.0"
 versions.firebase_messaging = "20.1.6"
 versions.googleServices = "4.3.5"
-versions.androidGradle = "7.0.0-alpha14"
+versions.androidGradle = "7.0.0-alpha15"
 versions.gson = "2.8.6"
 versions.junit = "4.13.2"
 versions.koin = "3.0.1"
@@ -62,7 +62,7 @@ versions.recyclerView = "1.1.0"
 versions.retrofit2 = "2.9.0"
 versions.rxAndroid = "2.1.1"
 versions.rxKotlin = "2.4.0"
-versions.snapshotPublisher = "2.2.0"
+versions.snapshotPublisher = "e6e1a923ed"
 versions.stetho = "1b2c025a14"
 versions.timber = "4.7.1"
 versions.tooLargeTool = "915ad99e83"
